Rebase from 'release/indigo/actionlib_lisp'

--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,15 @@
 <package>
   <name>actionlib_lisp</name>
-  <version>0.2.9</version>
+  <version>0.2.10</version>
   <description>
    actionlib_lisp is a native implementation of the famous actionlib
    in Common Lisp. It provides a client and a simple server.
   </description>
 
   <author>Bhaskara Marthi</author>
-  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>
+  <author>Lorenz Moesenlechner</author>
 
-  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
+  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
   <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
 
   <license>BSD</license>
@@ -20,9 +20,9 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>roslisp</run_depend> 
-  <run_depend>cl_utils</run_depend> 
-  <run_depend>actionlib_msgs</run_depend> 
+  <run_depend>roslisp</run_depend>
+  <run_depend>cl_utils</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
 </package>
 
