Rebase from 'release/indigo/cl_utils'

--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <package>
   <name>cl_utils</name>
-  <version>0.2.9</version>
+  <version>0.2.10</version>
   <description>
     Common Lisp utility libraries
   </description>
 
   <author>Bhaskara Marthi</author>
 
-  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
+  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
   <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
 
   <license>BSD</license>
@@ -18,5 +18,5 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>sbcl</run_depend> 
+  <run_depend>sbcl</run_depend>
 </package>
