--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0"?>
 <package>
   <name>roslisp_utilities</name>
-  <version>0.2.9</version>
+  <version>0.2.10</version>
   <description>
     Some utility functionality to interact with ROS using roslisp.
   </description>
 
-  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>
-  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
+  <author>Lorenz Moesenlechner</author>
 
-  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
+  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
   <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
 
   <license>BSD</license>
@@ -20,6 +19,6 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>roslisp</run_depend> 
+  <run_depend>roslisp</run_depend>
 
 </package>
