--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms_stamped
-	base = 5bac06b
-	trimbase = 
+	base = 6b7049a
+	trimbase = 5bac06b
 	parent = upstream
 	previous = e670ada
