--- a/cl_tf/package.xml
+++ b/cl_tf/package.xml
@@ -1,13 +1,14 @@
 <package>
   <name>cl_tf</name>
-  <version>0.2.9</version>
+  <version>0.2.10</version>
   <description>
     Client implementation to use TF from Common Lisp
   </description>
 
-  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>
+  <author>Lorenz Moesenlechner</author>
+  <author>Gayane Kazhoyan</author>
 
-  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
+  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
   <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
 
   <license>BSD</license>
