--- a/cl_transforms/package.xml
+++ b/cl_transforms/package.xml
@@ -1,14 +1,14 @@
 <package>
   <name>cl_transforms</name>
-  <version>0.2.9</version>
+  <version>0.2.10</version>
   <description>
     Homogeneous transform library for Common Lisp.
   </description>
 
   <author>Bhaskara Marthi</author>
-  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>
+  <author>Lorenz Moesenlechner</author>
 
-  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
+  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
   <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
 
   <license>BSD</license>
