--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms_stamped
 	base = d1cbf33
-	trimbase = e93f53c
+	trimbase = 
 	parent = upstream
 	previous = c90d609
