--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms
-	base = ffc677e
-	trimbase = 
+	base = af21a74
+	trimbase = ffc677e
 	parent = upstream
 	previous = e670ada
