--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf2
-	base = dd7b21f
-	trimbase = 
+	base = 781cbd0
+	trimbase = dd7b21f
 	parent = upstream
 	previous = e670ada
