--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_common
-	base = 9f438a0
-	trimbase = 
+	base = aa1fe80
+	trimbase = 9f438a0
 	parent = upstream
 	previous = e670ada
