--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf
-	base = 873728c
-	trimbase = 
+	base = c65aa81
+	trimbase = 873728c
 	parent = upstream
 	previous = e670ada
