--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_urdf
-	base = 8932779
-	trimbase = 
+	base = c2d81a4
+	trimbase = 8932779
 	parent = upstream
 	previous = e670ada
