--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_lisp
-	base = 487fa54
-	trimbase = 
+	base = b47c692
+	trimbase = 487fa54
 	parent = upstream
 	previous = e670ada
