--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_utils
-	base = 5a5cdce
-	trimbase = 
+	base = 7113846
+	trimbase = 5a5cdce
 	parent = upstream
 	previous = e670ada
