--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_utilities
-	base = 2c0f116
-	trimbase = 
+	base = 604c36c
+	trimbase = 2c0f116
 	parent = upstream
 	previous = e670ada
