--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 06f873a
-	trimbase = 
+	trim = cl_transforms
+	base = 42e6e8b
+	trimbase = 06f873a
 	parent = upstream
 	previous = e670ada
