--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8a24996
-	trimbase = 
+	trim = cl_tf2
+	base = 56233b7
+	trimbase = 8a24996
 	parent = upstream
 	previous = e670ada
