--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 58a64e8
-	trimbase = 
+	trim = roslisp_common
+	base = 9b58d6e
+	trimbase = 58a64e8
 	parent = upstream
 	previous = e670ada
