--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2c41350
-	trimbase = 
+	trim = cl_tf
+	base = 695c043
+	trimbase = 2c41350
 	parent = upstream
 	previous = e670ada
