--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c64a487
-	trimbase = 
+	trim = actionlib_lisp
+	base = ed59033
+	trimbase = c64a487
 	parent = upstream
 	previous = e670ada
