--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 301b6f5
-	trimbase = 
+	trim = roslisp_utilities
+	base = 18bb8f6
+	trimbase = 301b6f5
 	parent = upstream
 	previous = e670ada
