--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e2e5d3c
-	trimbase = 
+	trim = cl_utils
+	base = 34db2eb
+	trimbase = e2e5d3c
 	parent = upstream
 	previous = e670ada
