--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e710b66
-	trimbase = 
+	trim = cl_urdf
+	base = 6b5bf08
+	trimbase = e710b66
 	parent = upstream
 	previous = e670ada
