--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ed59033
+	base = 8a5afe4
 	trimbase = 
 	parent = release/melodic/actionlib_lisp
-	previous = 
+	previous = ed59033
