--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7dc0bd8
+	base = afe4e7c
 	trimbase = 
 	parent = debian/melodic/actionlib_lisp
-	previous = 
+	previous = 7dc0bd8
