--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 18bb8f6
+	base = 0370cb9
 	trimbase = 
 	parent = release/melodic/roslisp_utilities
-	previous = 
+	previous = 18bb8f6
