--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a166112
+	base = 5bbaedb
 	trimbase = 
 	parent = debian/melodic/roslisp_utilities
-	previous = 
+	previous = a166112
