--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 261355a
+	base = 173db32
 	trimbase = 
 	parent = debian/melodic/cl_utils
-	previous = 
+	previous = 261355a
