--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6b5bf08
+	base = fb153ac
 	trimbase = 
 	parent = release/melodic/cl_urdf
-	previous = 
+	previous = 6b5bf08
