--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 930eb34
+	base = 6debb1b
 	trimbase = 
 	parent = debian/melodic/cl_urdf
-	previous = 
+	previous = 930eb34
