--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 115592a
+	base = 6a2197e
 	trimbase = 
 	parent = release/melodic/cl_transforms_stamped
-	previous = 
+	previous = 115592a
