--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bb5c5d8
+	base = 5ed1746
 	trimbase = 
 	parent = debian/melodic/cl_transforms_stamped
-	previous = 
+	previous = bb5c5d8
