--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cf2259f
+	base = d783af8
 	trimbase = 
 	parent = debian/melodic/cl_transforms
-	previous = 
+	previous = cf2259f
