--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 56233b7
+	base = e92a249
 	trimbase = 
 	parent = release/melodic/cl_tf2
-	previous = 
+	previous = 56233b7
