--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 16d4c1d
+	base = 0a8e1be
 	trimbase = 
 	parent = debian/melodic/cl_tf2
-	previous = 
+	previous = 16d4c1d
