--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a96ddab
+	base = f2cf383
 	trimbase = 
 	parent = debian/melodic/roslisp_common
-	previous = 
+	previous = a96ddab
