--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 695c043
+	base = 0765393
 	trimbase = 
 	parent = release/melodic/cl_tf
-	previous = 
+	previous = 695c043
