--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 32ce312
+	base = f595899
 	trimbase = 
 	parent = debian/melodic/cl_tf
-	previous = 
+	previous = 32ce312
