--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5f3415a
+	base = fa5d966
 	trimbase = 
 	parent = debian/melodic/actionlib_lisp
-	previous = 
+	previous = 5f3415a
