--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 35ef023
+	base = 04277e7
 	trimbase = 
 	parent = debian/melodic/roslisp_utilities
-	previous = 
+	previous = 35ef023
