--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a091e10
+	base = c87b095
 	trimbase = 
 	parent = debian/melodic/cl_utils
-	previous = 
+	previous = a091e10
