--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4ba3608
+	base = 59c3add
 	trimbase = 
 	parent = debian/melodic/cl_urdf
-	previous = 
+	previous = 4ba3608
