--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f31cfb0
+	base = af601eb
 	trimbase = 
 	parent = debian/melodic/cl_transforms_stamped
-	previous = 
+	previous = f31cfb0
