--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 10881fe
+	base = d4e3129
 	trimbase = 
 	parent = debian/melodic/cl_transforms
-	previous = 
+	previous = 10881fe
