--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 694b0eb
+	base = 565a159
 	trimbase = 
 	parent = debian/melodic/cl_tf2
-	previous = 
+	previous = 694b0eb
