--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6f9eef0
+	base = 0a5e2b6
 	trimbase = 
 	parent = debian/melodic/roslisp_common
-	previous = 
+	previous = 6f9eef0
