--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ad5e3eb
+	base = eb245b2
 	trimbase = 
 	parent = debian/melodic/cl_tf
-	previous = 
+	previous = ad5e3eb
