--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1043686
+	base = b098f9b
 	trimbase = 
 	parent = rpm/melodic/actionlib_lisp
-	previous = 
+	previous = 1043686
