--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4fd8ced
+	base = f886a5e
 	trimbase = 
 	parent = rpm/melodic/roslisp_utilities
-	previous = 
+	previous = 4fd8ced
