--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 34db2eb
+	base = b439475
 	trimbase = 
 	parent = release/melodic/cl_utils
-	previous = 
+	previous = 34db2eb
