--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8168467
+	base = e125be5
 	trimbase = 
 	parent = rpm/melodic/cl_utils
-	previous = 
+	previous = 8168467
