--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 514b5aa
+	base = d5afa40
 	trimbase = 
 	parent = rpm/melodic/cl_urdf
-	previous = 
+	previous = 514b5aa
