--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 561e1da
+	base = b4a0209
 	trimbase = 
 	parent = rpm/melodic/cl_transforms_stamped
-	previous = 
+	previous = 561e1da
