--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 42e6e8b
+	base = a25e8d0
 	trimbase = 
 	parent = release/melodic/cl_transforms
-	previous = 
+	previous = 42e6e8b
