--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fb52b96
+	base = c1bf5e4
 	trimbase = 
 	parent = rpm/melodic/cl_transforms
-	previous = 
+	previous = fb52b96
