--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a38a40e
+	base = 21e7c36
 	trimbase = 
 	parent = rpm/melodic/cl_tf2
-	previous = 
+	previous = a38a40e
