--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9b58d6e
+	base = 22bfcb0
 	trimbase = 
 	parent = release/melodic/roslisp_common
-	previous = 
+	previous = 9b58d6e
