--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2bb7228
+	base = 54690a9
 	trimbase = 
 	parent = rpm/melodic/roslisp_common
-	previous = 
+	previous = 2bb7228
