--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms_stamped
 	base = 89548e4
-	trimbase = e3383ff
+	trimbase = 
 	parent = upstream
 	previous = e670ada
