--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms
-	base = aa27e31
-	trimbase = 
+	base = c2e2818
+	trimbase = aa27e31
 	parent = upstream
 	previous = fadeba2
