--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf2
-	base = 286c2a3
-	trimbase = 
+	base = a01172b
+	trimbase = 286c2a3
 	parent = upstream
 	previous = fadeba2
