--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_common
-	base = 5388e8d
-	trimbase = 
+	base = f3f394c
+	trimbase = 5388e8d
 	parent = upstream
 	previous = fadeba2
