--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf
-	base = 291d19f
-	trimbase = 
+	base = 69cfe63
+	trimbase = 291d19f
 	parent = upstream
 	previous = fadeba2
