--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_lisp
-	base = b597897
-	trimbase = 
+	base = a09f429
+	trimbase = b597897
 	parent = upstream
 	previous = fadeba2
