--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_utilities
-	base = 61ccfee
-	trimbase = 
+	base = f6f428d
+	trimbase = 61ccfee
 	parent = upstream
 	previous = fadeba2
