--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_utils
-	base = 8d4e660
-	trimbase = 
+	base = 417e33f
+	trimbase = 8d4e660
 	parent = upstream
 	previous = fadeba2
