--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_urdf
-	base = 373a51b
-	trimbase = 
+	base = 9cb1ac8
+	trimbase = 373a51b
 	parent = upstream
 	previous = fadeba2
