--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms_stamped
 	base = 115592a
-	trimbase = c529136
+	trimbase = 
 	parent = upstream
 	previous = e670ada
