--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms
-	base = 46c8c3e
-	trimbase = 
+	base = 2992b80
+	trimbase = 46c8c3e
 	parent = upstream
 	previous = fadeba2
