--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf2
-	base = 8614418
-	trimbase = 
+	base = debb1fc
+	trimbase = 8614418
 	parent = upstream
 	previous = fadeba2
