--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_common
-	base = efe56de
-	trimbase = 
+	base = 1a31296
+	trimbase = efe56de
 	parent = upstream
 	previous = fadeba2
