--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf
-	base = 8e231c7
-	trimbase = 
+	base = 2241ae5
+	trimbase = 8e231c7
 	parent = upstream
 	previous = fadeba2
