--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_lisp
-	base = 993bf6a
-	trimbase = 
+	base = fca55c9
+	trimbase = 993bf6a
 	parent = upstream
 	previous = fadeba2
