--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_utilities
-	base = ba8bccc
-	trimbase = 
+	base = f992c2c
+	trimbase = ba8bccc
 	parent = upstream
 	previous = fadeba2
