--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_utils
-	base = ef0d28a
-	trimbase = 
+	base = 6bc4cec
+	trimbase = ef0d28a
 	parent = upstream
 	previous = fadeba2
