--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_urdf
-	base = 64a691e
-	trimbase = 
+	base = dec94c4
+	trimbase = 64a691e
 	parent = upstream
 	previous = fadeba2
