--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms_stamped
 	base = 9c08221
-	trimbase = 66c3e03
+	trimbase = 
 	parent = upstream
 	previous = fadeba2
