--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms_stamped
-	base = e55d533
-	trimbase = 
+	base = 1519610
+	trimbase = e55d533
 	parent = upstream
 	previous = 65af9ce
