--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms
-	base = 6d78ad8
-	trimbase = 
+	base = 29f3260
+	trimbase = 6d78ad8
 	parent = upstream
 	previous = 65af9ce
