--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf2
-	base = 87c4caf
-	trimbase = 
+	base = 1e7e56c
+	trimbase = 87c4caf
 	parent = upstream
 	previous = 65af9ce
