--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_common
-	base = aafe59a
-	trimbase = 
+	base = bd82dfa
+	trimbase = aafe59a
 	parent = upstream
 	previous = 65af9ce
