--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf
-	base = 468a48b
-	trimbase = 
+	base = 52ca670
+	trimbase = 468a48b
 	parent = upstream
 	previous = 65af9ce
