--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_lisp
-	base = c66382d
-	trimbase = 
+	base = d8dcd64
+	trimbase = c66382d
 	parent = upstream
 	previous = 65af9ce
