--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_utilities
-	base = 86d28cb
-	trimbase = 
+	base = 10b7599
+	trimbase = 86d28cb
 	parent = upstream
 	previous = 65af9ce
