--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_utils
-	base = 4902b5a
-	trimbase = 
+	base = 04d5e54
+	trimbase = 4902b5a
 	parent = upstream
 	previous = 65af9ce
