--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_urdf
-	base = a8a0a47
-	trimbase = 
+	base = 28d0da7
+	trimbase = a8a0a47
 	parent = upstream
 	previous = 65af9ce
