Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.2.10-0": ["Tue Oct 16 2018", "Gayane Kazhoyan", "kazhoyan@cs.uni-bremen.de"], "0.2.11-1": ["Thu May 16 2019", "Gayane Kazhoyan", "kazhoyan@cs.uni-bremen.de"]}
+{"0.2.10-0": ["Tue Oct 16 2018", "Gayane Kazhoyan", "kazhoyan@cs.uni-bremen.de"], "0.2.12-1": ["Tue May 21 2019", "Gayane Kazhoyan", "kazhoyan@cs.uni-bremen.de"], "0.2.11-1": ["Thu May 16 2019", "Gayane Kazhoyan", "kazhoyan@cs.uni-bremen.de"]}
