--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms_stamped
 	base = 47a1b28
-	trimbase = 22c6c5f
+	trimbase = 
 	parent = upstream
 	previous = fadeba2
