--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms_stamped
-	base = 99c0510
-	trimbase = 
+	base = 37697cd
+	trimbase = 99c0510
 	parent = upstream
 	previous = 65af9ce
