--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms
-	base = 0bae29f
-	trimbase = 
+	base = 6a75ac9
+	trimbase = 0bae29f
 	parent = upstream
 	previous = 65af9ce
