--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf2
-	base = d722416
-	trimbase = 
+	base = 7676e56
+	trimbase = d722416
 	parent = upstream
 	previous = 65af9ce
