--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_common
-	base = b9a9d38
-	trimbase = 
+	base = 254c6c9
+	trimbase = b9a9d38
 	parent = upstream
 	previous = 65af9ce
