--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf
-	base = 0f5e70d
-	trimbase = 
+	base = 9aac5f6
+	trimbase = 0f5e70d
 	parent = upstream
 	previous = 65af9ce
