--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_lisp
-	base = 90f4ebb
-	trimbase = 
+	base = 7559dab
+	trimbase = 90f4ebb
 	parent = upstream
 	previous = 65af9ce
