--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_utilities
-	base = d0513a8
-	trimbase = 
+	base = b70d984
+	trimbase = d0513a8
 	parent = upstream
 	previous = 65af9ce
