--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_utils
-	base = 50e5cd8
-	trimbase = 
+	base = 4f279a7
+	trimbase = 50e5cd8
 	parent = upstream
 	previous = 65af9ce
