--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_urdf
-	base = 2b8ae2e
-	trimbase = 
+	base = f5f5753
+	trimbase = 2b8ae2e
 	parent = upstream
 	previous = 65af9ce
