--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms_stamped
-	base = 28178ef
-	trimbase = 
+	base = 2597695
+	trimbase = 28178ef
 	parent = upstream
 	previous = 477cf05
