--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms
-	base = 3db6639
-	trimbase = 
+	base = 38ddb89
+	trimbase = 3db6639
 	parent = upstream
 	previous = 477cf05
