--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf2
-	base = 2b8a4a5
-	trimbase = 
+	base = 631de53
+	trimbase = 2b8a4a5
 	parent = upstream
 	previous = 477cf05
