--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_common
-	base = 8678cf1
-	trimbase = 
+	base = 2ce7fe0
+	trimbase = 8678cf1
 	parent = upstream
 	previous = 477cf05
