--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf
-	base = 0a3370e
-	trimbase = 
+	base = 547012e
+	trimbase = 0a3370e
 	parent = upstream
 	previous = 477cf05
