--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_lisp
-	base = f1e337f
-	trimbase = 
+	base = 886d914
+	trimbase = f1e337f
 	parent = upstream
 	previous = 477cf05
