--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_utilities
-	base = 358c531
-	trimbase = 
+	base = 3c6e787
+	trimbase = 358c531
 	parent = upstream
 	previous = 477cf05
