--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_utils
-	base = 8e22dd1
-	trimbase = 
+	base = c207a71
+	trimbase = 8e22dd1
 	parent = upstream
 	previous = 477cf05
