--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_urdf
-	base = d55631e
-	trimbase = 
+	base = 8ac15d7
+	trimbase = d55631e
 	parent = upstream
 	previous = 477cf05
