--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms_stamped
-	base = 8e49513
-	trimbase = 
+	base = 9201143
+	trimbase = 8e49513
 	parent = upstream
 	previous = 477cf05
