--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms
-	base = 695ec64
-	trimbase = 
+	base = b113efc
+	trimbase = 695ec64
 	parent = upstream
 	previous = 477cf05
