--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf2
-	base = 5ece111
-	trimbase = 
+	base = 36f22b3
+	trimbase = 5ece111
 	parent = upstream
 	previous = 477cf05
