--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_common
-	base = 531ed5f
-	trimbase = 
+	base = abc6448
+	trimbase = 531ed5f
 	parent = upstream
 	previous = 477cf05
