--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf
-	base = c228079
-	trimbase = 
+	base = 44eae6f
+	trimbase = c228079
 	parent = upstream
 	previous = 477cf05
