--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_lisp
-	base = bf1ed78
-	trimbase = 
+	base = 5fd9c23
+	trimbase = bf1ed78
 	parent = upstream
 	previous = 477cf05
