--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_utilities
-	base = 53a0839
-	trimbase = 
+	base = 6fced62
+	trimbase = 53a0839
 	parent = upstream
 	previous = 477cf05
