--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_utils
-	base = daa7507
-	trimbase = 
+	base = 34eedbf
+	trimbase = daa7507
 	parent = upstream
 	previous = 477cf05
