--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_urdf
-	base = 55fcb29
-	trimbase = 
+	base = a84a424
+	trimbase = 55fcb29
 	parent = upstream
 	previous = 477cf05
