--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = df4a2c02
-	base = 9bfbfbf9
-	trim = 
-	trimbase = 
+	base = 78295ab5
+	trim = actionlib_lisp
+	trimbase = 9bfbfbf9
