--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = df4a2c02
-	base = 34611e76
-	trim = 
-	trimbase = 
+	base = d8446c99
+	trim = cl_utils
+	trimbase = 34611e76
