--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = df4a2c02
-	base = 70dbd523
-	trim = 
-	trimbase = 
+	base = 75d3caaf
+	trim = cl_transforms_stamped
+	trimbase = 70dbd523
