--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = df4a2c02
-	base = af7a30a7
-	trim = 
-	trimbase = 
+	base = 6b68914d
+	trim = cl_urdf
+	trimbase = af7a30a7
