--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = df4a2c02
-	base = 23883a10
-	trim = 
-	trimbase = 
+	base = 57e3de16
+	trim = cl_transforms
+	trimbase = 23883a10
