--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = df4a2c02
-	base = 6a67b493
-	trim = 
-	trimbase = 
+	base = 455b3d4c
+	trim = cl_tf2
+	trimbase = 6a67b493
