--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = df4a2c02
-	base = 8edd2915
-	trim = 
-	trimbase = 
+	base = dfd12605
+	trim = cl_tf
+	trimbase = 8edd2915
