--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = df4a2c02
-	base = 96d3a9dd
-	trim = 
-	trimbase = 
+	base = dd382790
+	trim = roslisp_utilities
+	trimbase = 96d3a9dd
