--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = df4a2c02
-	base = 27ac88d6
-	trim = 
-	trimbase = 
+	base = 0b51ccaa
+	trim = roslisp_common
+	trimbase = 27ac88d6
