--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/roslisp_common
-	previous = 
-	base = 0b51ccaa
+	previous = 0b51ccaa
+	base = 5783e567
 	trim = 
 	trimbase = 
