--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/roslisp_common
-	previous = 
-	base = 5221746e
+	previous = 5221746e
+	base = f57f0df4
 	trim = 
 	trimbase = 
