--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/cl_utils
-	previous = 
-	base = d8446c99
+	previous = d8446c99
+	base = 0ab80e3f
 	trim = 
 	trimbase = 
