--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_utils
-	previous = 
-	base = c9efaf06
+	previous = c9efaf06
+	base = ffb9e68d
 	trim = 
 	trimbase = 
