--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/cl_tf2
-	previous = 
-	base = 455b3d4c
+	previous = 455b3d4c
+	base = 170cebd6
 	trim = 
 	trimbase = 
