--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_tf2
-	previous = 
-	base = f901794c
+	previous = f901794c
+	base = 61a142a6
 	trim = 
 	trimbase = 
