--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/cl_urdf
-	previous = 
-	base = 6b68914d
+	previous = 6b68914d
+	base = ce1b6ea2
 	trim = 
 	trimbase = 
