--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_urdf
-	previous = 
-	base = c2bcc061
+	previous = c2bcc061
+	base = 62db60c2
 	trim = 
 	trimbase = 
