--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/roslisp_utilities
-	previous = 
-	base = dd382790
+	previous = dd382790
+	base = 7c198cb8
 	trim = 
 	trimbase = 
