--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/roslisp_utilities
-	previous = 
-	base = 5ff80cd3
+	previous = 5ff80cd3
+	base = 6741e138
 	trim = 
 	trimbase = 
