--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/cl_tf
-	previous = 
-	base = dfd12605
+	previous = dfd12605
+	base = ef3293b0
 	trim = 
 	trimbase = 
