--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_tf
-	previous = 
-	base = 36b31ef4
+	previous = 36b31ef4
+	base = 1b33829b
 	trim = 
 	trimbase = 
