--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/actionlib_lisp
-	previous = 
-	base = 78295ab5
+	previous = 78295ab5
+	base = d1459866
 	trim = 
 	trimbase = 
