--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/actionlib_lisp
-	previous = 
-	base = b7e4dd0b
+	previous = b7e4dd0b
+	base = 5fd4b8e7
 	trim = 
 	trimbase = 
