--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_transforms
-	previous = 
-	base = 36beeaed
+	previous = 36beeaed
+	base = 0fcf6df3
 	trim = 
 	trimbase = 
