--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/cl_transforms_stamped
-	previous = 
-	base = 75d3caaf
+	previous = 75d3caaf
+	base = fc5e1986
 	trim = 
 	trimbase = 
