--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_transforms_stamped
-	previous = 
-	base = 5505e0ce
+	previous = 5505e0ce
+	base = 2eec1f5a
 	trim = 
 	trimbase = 
