--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_urdf
-	previous = 
-	base = 7317ab6d
+	previous = 7317ab6d
+	base = 23477040
 	trim = 
 	trimbase = 
