--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/roslisp_common
-	previous = 
-	base = 7f6e9677
+	previous = 7f6e9677
+	base = 640c1068
 	trim = 
 	trimbase = 
