--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_tf2
-	previous = 
-	base = e6a0b6e4
+	previous = e6a0b6e4
+	base = 76c14f98
 	trim = 
 	trimbase = 
