--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_tf
-	previous = 
-	base = 5508f6b9
+	previous = 5508f6b9
+	base = 5d8b4225
 	trim = 
 	trimbase = 
