--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_transforms_stamped
-	previous = 
-	base = 9663d3af
+	previous = 9663d3af
+	base = ab28f998
 	trim = 
 	trimbase = 
