--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_transforms
-	previous = 
-	base = 36b3e7d5
+	previous = 36b3e7d5
+	base = 3e51bab5
 	trim = 
 	trimbase = 
