--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/actionlib_lisp
-	previous = 
-	base = 9d187adc
+	previous = 9d187adc
+	base = c5a68bbd
 	trim = 
 	trimbase = 
