--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cl_utils
-	previous = 
-	base = a068fa34
+	previous = a068fa34
+	base = 39161ae8
 	trim = 
 	trimbase = 
