--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/roslisp_utilities
-	previous = 
-	base = eab8dcfe
+	previous = eab8dcfe
+	base = fbdda3b6
 	trim = 
 	trimbase = 
