--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_utilities
-	base = bce94c18
-	trimbase = 
+	base = b4699754
+	trimbase = bce94c18
 	parent = upstream
 	previous = ec060c39
