--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms
-	base = 0da087b7
-	trimbase = 
+	base = 4facd8c4
+	trimbase = 0da087b7
 	parent = upstream
 	previous = ec060c39
