--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = roslisp_common
-	base = 22e75c39
-	trimbase = 
+	base = 543b2dbf
+	trimbase = 22e75c39
 	parent = upstream
 	previous = ec060c39
