--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf2
-	base = 20ee10b6
-	trimbase = 
+	base = 74eec4e5
+	trimbase = 20ee10b6
 	parent = upstream
 	previous = ec060c39
