--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_tf
-	base = 49553aca
-	trimbase = 
+	base = 0c0b29ab
+	trimbase = 49553aca
 	parent = upstream
 	previous = ec060c39
