--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_lisp
-	base = 3a585f2e
-	trimbase = 
+	base = bf2ce86f
+	trimbase = 3a585f2e
 	parent = upstream
 	previous = ec060c39
