--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_utils
-	base = d5921fe2
-	trimbase = 
+	base = e8473485
+	trimbase = d5921fe2
 	parent = upstream
 	previous = ec060c39
