--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_urdf
-	base = 2e671ad6
-	trimbase = 
+	base = 4d495f13
+	trimbase = 2e671ad6
 	parent = upstream
 	previous = ec060c39
