--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cl_transforms_stamped
-	base = 31c7fa12
-	trimbase = 
+	base = 2ed8793d
+	trimbase = 31c7fa12
 	parent = upstream
 	previous = ec060c39
