--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec060c39
-	base = b72813b6
+	base = e192b390
 	trim = roslisp_utilities
-	trimbase = 
+	trimbase = b72813b6
