--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec060c39
-	base = 3e84d2b9
+	base = 0609cfb6
 	trim = cl_transforms
-	trimbase = 
+	trimbase = 3e84d2b9
