--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec060c39
-	base = d7e24600
+	base = 69a00ef8
 	trim = roslisp_common
-	trimbase = 
+	trimbase = d7e24600
