--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec060c39
-	base = c92f9d39
+	base = 2882df4d
 	trim = cl_tf2
-	trimbase = 
+	trimbase = c92f9d39
