--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec060c39
-	base = 7aff8060
+	base = 67f1e13f
 	trim = cl_tf
-	trimbase = 
+	trimbase = 7aff8060
