--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec060c39
-	base = ab799c3d
+	base = ff2e4605
 	trim = actionlib_lisp
-	trimbase = 
+	trimbase = ab799c3d
