--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec060c39
-	base = 30964a5e
+	base = 58c449e7
 	trim = cl_utils
-	trimbase = 
+	trimbase = 30964a5e
