--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec060c39
-	base = 82e20d50
+	base = c1ee8816
 	trim = cl_urdf
-	trimbase = 
+	trimbase = 82e20d50
