--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec060c39
-	base = d778616f
+	base = acc6a8ae
 	trim = cl_transforms_stamped
-	trimbase = 
+	trimbase = d778616f
